Fixed ham menu not rendering on iOS Safari

--- a/about.css
+++ b/about.css
@@ -48,7 +48,7 @@ body {
       scale: 0.8;
     }
     .about-box {
-      scale: 1.4;
+      scale: 1.3;
       
     }
     
